# libproto

./: .gitignore  CMakeLists.txt  Client.cpp  Client.hpp  Compress.cpp  Compress.hpp  Define.h  INSTALL  ImagePacket.cpp  ImagePacket.hpp  Message.cpp  Message.hpp  README.md  Server.cpp  Server.hpp  install.sh  main.cpp  testProtocol.cpp
docs/: serialization.md
include/: Client.hpp  Compress.hpp  Define.h  ImagePacket.hpp  Message.hpp  PayloadData.hpp  Server.hpp
include/zmq/: zhelpers.hpp
src/: Client.cpp  Compress.cpp  ImagePacket.cpp  Message.cpp  PayloadData.cpp  Server.cpp
test/: testClient.cpp  testProtocol.cpp  testSerialization.cpp  testServer.cpp
zmq/include/: zmq.hpp
